Cleaned up config, package and updated terminal

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rosely Docs",
+  "name": "rosely-docs",
   "version": "0.0.1",
   "description": "Rosely documentation website",
   "main": "none.js",
