--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,6 @@ title = "Rosely"
 enableRobotsTXT = true
 
 # Hugo allows theme composition (and inheritance). The precedence is from left to right.
-# theme = ["docsy", "hugo-creative-portfolio-theme"]
 theme = ["docsy"]
 
 # Will give values to .Lastmod etc.
@@ -26,7 +25,7 @@ pygmentsUseClasses = false
 pygmentsUseClassic = false
 #pygmentsOptions = "linenos=table"
 # See https://help.farbox.com/pygments.html
-pygmentsStyle = "tango"
+pygmentsStyle = "autumn"
 
 # Configure how URLs look like per section.
 [permalinks]
@@ -48,7 +47,7 @@ anchor = "smart"
 [services]
 [services.googleAnalytics]
 # Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
-# id = "UA-00000000-0"
+id = "UA-00000000-0"
 
 # Language configuration
 
@@ -68,15 +67,15 @@ time_format_blog = "2006-01-02"
       unsafe = true
   [markup.highlight]
       # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
-      style = "tango"
+      style = "autumn"
       # Uncomment if you want your chosen highlight style used for code blocks without a specified language
-      # guessSyntax = "true"
+      guessSyntax = "true"
 
 # Everything below this are Site Params
 
 [params]
 copyright = "Hello Tham"
-privacy_policy = "https://policies.google.com/privacy"
+privacy_policy = "https://hellotham.com/info/privacy/"
 
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
@@ -93,16 +92,16 @@ archived_version = false
 # The version number for the version of the docs represented in this doc set.
 # Used in the "version-banner" partial to display a version number for the 
 # current doc set.
-version = "0.0"
+version = "0.0.1"
 
 # A link to latest version of the docs. Used in the "version-banner" partial to
 # point people to the main doc site.
-url_latest_version = "https://example.com"
+url_latest_version = "https://rosely.hellotham.com"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/ChristineTham/Rosely-docsy"
+github_repo = "https://github.com/hellotham/rosely-docsy"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-github_project_repo = "https://github.com/ChristineTham/Rosely"
+github_project_repo = "https://github.com/hellotham/Rosely"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
@@ -130,14 +129,14 @@ sidebar_search_disable = false
 #  Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top nav bar
 navbar_logo = true
 # Set to true to disable the About link in the site footer
-footer_about_disable = false
+footer_about_disable = true
 
 # Adds a H2 section titled "Feedback" to the bottom of each doc. The responses are sent to Google Analytics as events.
 # This feature depends on [services.googleAnalytics] and will be disabled if "services.googleAnalytics.id" is not set.
 # If you want this feature, but occasionally need to remove the "Feedback" section from a single page,
 # add "hide_feedback: true" to the page's front matter.
 [params.ui.feedback]
-enable = true
+enable = false
 # The responses that the user sees after clicking "yes" (the page was helpful) or "no" (the page was not helpful).
 yes = 'Glad to hear it! Please <a href="https://github.com/USERNAME/REPOSITORY/issues/new">tell us how we can improve</a>.'
 no = 'Sorry to hear that. Please <a href="https://github.com/USERNAME/REPOSITORY/issues/new">tell us how we can improve</a>.'
@@ -151,34 +150,39 @@ enable = false
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
 [[params.links.user]]
-	name = "User mailing list"
-	url = "https://example.org/mail"
-	icon = "fa fa-envelope"
-        desc = "Discussion and help from your fellow users"
+	name = "Hello Tham"
+	url = "https://hellotham.com"
+	icon = "fas fa-info-circle"
+        desc = "Hello Tham company site"
+[[params.links.user]]
+	name = "Chris Tham"
+	url = "https://christham.net"
+	icon = "fas fa-user-circle"
+        desc = "Chris Tham personal site"
+[[params.links.user]]
+	name ="LinkedIn"
+	url = "https://http://linkedin.com/company/hellotham"
+	icon = "fab fa-linkedin"
+        desc = "Hello Tham LinkedIn profile"
 [[params.links.user]]
 	name ="Twitter"
-	url = "https://example.org/twitter"
+	url = "https://twitter.com/hellothamcom"
 	icon = "fab fa-twitter"
-        desc = "Follow us on Twitter to get the latest news!"
-[[params.links.user]]
-	name = "Stack Overflow"
-	url = "https://example.org/stack"
-	icon = "fab fa-stack-overflow"
-        desc = "Practical questions and curated answers"
+        desc = "Hello Tham Twitter profile"
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
 	name = "GitHub"
-	url = "https://github.com/google/docsy"
+	url = "https://github.com/hellotham/"
 	icon = "fab fa-github"
-        desc = "Development takes place here!"
+        desc = "Hello Tham on GitHub"
 [[params.links.developer]]
-	name = "Slack"
-	url = "https://example.org/slack"
-	icon = "fab fa-slack"
-        desc = "Chat with other project developers"
+	name = "Rosely"
+	url = "https://github.com/hellotham/Rosely"
+	icon = "fab fa-github"
+        desc = "Rosely package"
 [[params.links.developer]]
-	name = "Developer mailing list"
-	url = "https://example.org/mail"
-	icon = "fa fa-envelope"
-        desc = "Discuss development issues around the project"
+	name = "Rosely Documentation"
+	url = "https://github.com/hellotham/rosely-docs"
+	icon = "fab fa-github"
+        desc = "Repository for this site"
 
