--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Rosely documentation website",
   "main": "none.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "update": "git submodule update --init --recursive"
   },
   "repository": {
     "type": "git",
